force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Cannot_Complete_SCD_Action_Reason__c.field-meta.xml
<CustomField>
    <fullName>VCC_Cannot_Complete_SCD_Action_Reason__c</fullName>
    <description>Field for specifying why Scheduling Action cannot completed.</description>
    <inlineHelpText>Specify Reason why Scheduling Action not completed</inlineHelpText>
    <label>Cannot Complete Scheduling Action Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Appointment Available</fullName>
            </value>
            <value>
                <fullName>Restricted / Unavailable Clinic</fullName>
            </value>
            <value>
                <fullName>Self-Referred/ Out-of-Cycle Request</fullName>
            </value>
            <value>
                <fullName>Consult/Referral Does Not Exist</fullName>
            </value>
            <value>
                <fullName>Consult Review Required</fullName>
            </value>
            <value>
                <fullName>Not Authorized in Service Line Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>