force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CAPSLOCK__c.field-meta.xml
<CustomField>
    <fullName>VCC_CAPSLOCK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Environment surveyed and all participants identified. Virtual conference room locked.</description>
    <inlineHelpText>Environment surveyed and all participants identified. Virtual conference room locked.</inlineHelpText>
    <label>CAPSLOCK</label>
    <type>Checkbox</type>
</CustomField>