force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Caregiver_who_rec_education_Tier_II__c.field-meta.xml
<CustomField>
    <fullName>VCC_Caregiver_who_rec_education_Tier_II__c</fullName>
    <description>The name of the family member and/or caregiver who received patient education</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the name of the family member and/or caregiver who received patient education</inlineHelpText>
    <label>Caregiver who received education-Tier II</label>
    <length>100</length>
    <type>Text</type>
</CustomField>