force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Case_Metrics__c.field-meta.xml
<CustomField>
    <fullName>VCC_Case_Metrics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field is used to relate the PN to the Case metric record of the parent Case</description>
    <label>Case Metrics</label>
    <referenceTo>VCC_Case_Metrics__c</referenceTo>
    <relationshipLabel>Progress Notes</relationshipLabel>
    <relationshipName>Progress_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>