force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CCC_Virtual_Clinic_Visit__c.field-meta.xml
<CustomField>
    <fullName>VCC_CCC_Virtual_Clinic_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Veteran is requesting a Virtual Clinic Visit</description>
    <inlineHelpText>Veteran is requesting a Virtual Clinic Visit</inlineHelpText>
    <label>CCC Virtual Clinic Visit</label>
    <type>Checkbox</type>
</CustomField>