force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Comments_Future_Appointments__c.field-meta.xml
<CustomField>
    <fullName>VCC_Comments_Future_Appointments__c</fullName>
    <description>Used to add comments about future appointments</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter comments about future appointments</inlineHelpText>
    <label>Comments - Future Appointments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>