force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Comments_Patient_Education__c.field-meta.xml
<CustomField>
    <fullName>VCC_Comments_Patient_Education__c</fullName>
    <description>Comments about patient education (expected compliance, barriers to information exchange, etc.)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter comments about patient education (expected compliance, barriers to information exchange, etc.)</inlineHelpText>
    <label>Comments - Patient Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>