force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Comments_patient_in_crisis__c.field-meta.xml
<CustomField>
    <fullName>VCC_Comments_patient_in_crisis__c</fullName>
    <description>Enter comments related to the patient that is in crisis</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter comments related to the patient in crisis</inlineHelpText>
    <label>Comments - Patient in crisis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>