force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Comments_unable_to_assist_non_triage__c.field-meta.xml
<CustomField>
    <fullName>VCC_Comments_unable_to_assist_non_triage__c</fullName>
    <description>Must enter comments when the patient is non-triage and &quot;Unable to assist patient-non triage&quot; is checked</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Must enter comments when the patient is non-triage and &quot;Unable to assist patient-non triage&quot; is checked</inlineHelpText>
    <label>Comments - Unable to assist_non-triage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>