force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Comments_unable_to_assist_patient__c.field-meta.xml
<CustomField>
    <fullName>VCC_Comments_unable_to_assist_patient__c</fullName>
    <description>Space for agent to enter comments if he/she checked &apos;Unable to assist patient&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter comments if you checked &apos;Unable to assist patient&apos;</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>