force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Completed_SBOR_Form__c.field-meta.xml
<CustomField>
    <fullName>VCC_Completed_SBOR_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the patient is suicidal and an SBOR Form was completed</description>
    <inlineHelpText>Check if the patient is suicidal and an SBOR Form was completed</inlineHelpText>
    <label>Completed SBOR Form</label>
    <type>Checkbox</type>
</CustomField>