force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Conducted_triage_discussed_symptoms__c.field-meta.xml
<CustomField>
    <fullName>VCC_Conducted_triage_discussed_symptoms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if conducted triage with or without TXCC.</description>
    <inlineHelpText>Check if conducted triage with or without TXCC.</inlineHelpText>
    <label>Conducted triage/discussed symptoms</label>
    <type>Checkbox</type>
</CustomField>