force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Conjugate_gaze_with_normal_EOM__c.field-meta.xml
<CustomField>
    <fullName>VCC_Conjugate_gaze_with_normal_EOM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Virtual neurological observation about patient made by medical provider during virtual care visit</description>
    <inlineHelpText>Virtual neurological observation about patient made by medical provider during virtual care visit</inlineHelpText>
    <label>Conjugate gaze with normal EOM</label>
    <type>Checkbox</type>
</CustomField>