force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Contacted_authorities_welfare_check__c.field-meta.xml
<CustomField>
    <fullName>VCC_Contacted_authorities_welfare_check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the patient is non-triage, the call was dropped, and the agent contacted authorities to perform a welfare check</description>
    <inlineHelpText>Check if the patient is non-triage, the call was dropped, and the agent contacted authorities to perform a welfare check</inlineHelpText>
    <label>Contacted authorities for welfare check</label>
    <type>Checkbox</type>
</CustomField>