force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Contacted_Emergency_Service_suicidal__c.field-meta.xml
<CustomField>
    <fullName>VCC_Contacted_Emergency_Service_suicidal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the patient is suicidal and Emergency Services were contacted.</description>
    <inlineHelpText>Tele EC, in person ER/UC or MH provider</inlineHelpText>
    <label>Warm Hand off to Higher Level of Care</label>
    <type>Checkbox</type>
</CustomField>