force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Contacted_emergency_services_911_EMS__c.field-meta.xml
<CustomField>
    <fullName>VCC_Contacted_emergency_services_911_EMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Emergency care medical provider instructed patient to receive during Virtual Visit - remained on phone with patient until responders arrived</description>
    <inlineHelpText>Emergency care medical provider instructed patient to receive during Virtual Visit - remained on phone with patient until responders arrived</inlineHelpText>
    <label>Contacted emergency services (911/EMS)</label>
    <type>Checkbox</type>
</CustomField>