force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Contacted_emergency_services__c.field-meta.xml
<CustomField>
    <fullName>VCC_Contacted_emergency_services__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >Check if you referred the patient to emergency services and contacted emergency services, remained on phone with the patient until responders arrived.</description>
    <inlineHelpText>Checked if the Agent referred the patient to emergency services and contacted emergency services, remained on phone with the patient until responders
        arrived.</inlineHelpText>
    <label>Contacted EMS/e911</label>
    <type>Checkbox</type>
</CustomField>