force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Contacted_MP_PACT_for_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>VCC_Contacted_MP_PACT_for_Follow_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the patient is in crisis and MP/PACT was contacted for follow up</description>
    <inlineHelpText>Check if the patient is in crisis and MP/PACT was contacted for follow up</inlineHelpText>
    <label>Contacted MP/PACT for Follow Up</label>
    <type>Checkbox</type>
</CustomField>