force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Controlled_Non_VA_Medication__c.field-meta.xml
<CustomField>
    <fullName>VCC_Controlled_Non_VA_Medication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the requested Non-VA medication is a controlled substance</description>
    <inlineHelpText>Check if the requested Non-VA medication is controlled substance. SUD Labs will auto populate on Save if selected.</inlineHelpText>
    <label>Controlled Non-VA Medication</label>
    <type>Checkbox</type>
</CustomField>