force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_COVID_Screening__c.field-meta.xml
<CustomField>
    <fullName>VCC_COVID_Screening__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to document whether a COVID screening was conducted during a Clinical Triage call.</description>
    <inlineHelpText>Used to document whether a COVID screening was conducted during a Clinical Triage call.</inlineHelpText>
    <label>Conducted COVID Screening</label>
    <type>Checkbox</type>
</CustomField>