force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS1_Other_action_s_taken_by_nurse__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS1_Other_action_s_taken_by_nurse__c</fullName>
    <description>Description of what actions were taken by the nurse</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other action(s) taken by nurse</label>
    <type>TextArea</type>
</CustomField>