force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS1_Provide_assistance_in_retesting__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS1_Provide_assistance_in_retesting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when our facility helps patient with retesting</description>
    <label>Provide assistance in retesting</label>
    <type>Checkbox</type>
</CustomField>