force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Call_back_to_the_CCC_if_positive__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Call_back_to_the_CCC_if_positive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicates to call back if the COVID test is positive.</description>
    <label>Call back to the CCC if test is positive</label>
    <type>Checkbox</type>
</CustomField>