force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Checked_FDA_Authorized_Test_Kit__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Checked_FDA_Authorized_Test_Kit__c</fullName>
    <description
    >If patient had a home test done, the RN user needs to choose from the options whether patient used FDA or non FDA authorized test kit or if RN did not check.</description>
    <inlineHelpText>If patient had a home test done, please choose from these options.</inlineHelpText>
    <label>Checked for FDA Authorized Test Kit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FDA authorized test kit used</fullName>
            </value>
            <value>
                <fullName>Non-FDA authorized test kit used</fullName>
            </value>
            <value>
                <fullName>Did not check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>