force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Date_of_Test_was__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Date_of_Test_was__c</fullName>
    <description>Date that test was taken.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Test was</label>
    <type>Date</type>
</CustomField>