force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Direct_to_correct_perform_test__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Direct_to_correct_perform_test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that indicates if a Caller was directed on how to perform a self test.</description>
    <label>Direct to correctly perform a self-test</label>
    <type>Checkbox</type>
</CustomField>