force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Fever__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Fever__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability to select Fever as a symptom through the Covid Screening</description>
    <label>Fever</label>
    <type>Checkbox</type>
</CustomField>