force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Home_Oral_Med_Instructions_Given__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Home_Oral_Med_Instructions_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
    >Instructed the patient that oral medication at home is only an option within 5 days of symptoms, with a confirmed positive test. If patient wants to discuss oral
        medication patient is to call back to the CCC to inform the staff.</inlineHelpText>
    <label>Home Oral Med Instructions Given</label>
    <type>Checkbox</type>
</CustomField>