force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Muscle_pain__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Muscle_pain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability to select Muscle pain as a symptom through the Covid Screening</description>
    <label>Muscle pain</label>
    <type>Checkbox</type>
</CustomField>