force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Name_of_Test__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Name_of_Test__c</fullName>
    <description>For COVID Test to Treat, name of the test taken.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Test</label>
    <type>TextArea</type>
</CustomField>