force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_New_loss_of_taste_or_smell__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_New_loss_of_taste_or_smell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability to select New loss of taste or smell as a symptom through the Covid Screening</description>
    <label>New loss of taste or smell</label>
    <type>Checkbox</type>
</CustomField>