force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Patient_doesnt_have_a_home_test__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Patient_doesnt_have_a_home_test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked if patient does not have access to a COVID test kit at home</description>
    <label>Patient does not have a home test kit</label>
    <type>Checkbox</type>
</CustomField>