force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_POSITIVE_symptoms_or_exposure__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_POSITIVE_symptoms_or_exposure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when patient reports any symptoms or possible exposure</description>
    <inlineHelpText>Any symptoms or exposure equal a positive screen and requires further evaluation</inlineHelpText>
    <label>POSITIVE symptom/s or exposure</label>
    <type>Checkbox</type>
</CustomField>