force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Reports_prior_COVID_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Reports_prior_COVID_diagnosis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when patient reports a prior COVID diagnosis</description>
    <label>Reports prior COVID diagnosis</label>
    <type>Checkbox</type>
</CustomField>