force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Result_is_negative_without_sympto__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Result_is_negative_without_sympto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when patient does not show COVID-like symptoms and test results are negative</description>
    <label>Result is negative without symptoms</label>
    <type>Checkbox</type>
</CustomField>