force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Results_of_Screening__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Results_of_Screening__c</fullName>
    <description>Explanation of COVID screening results</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Results of Screening</label>
    <type>TextArea</type>
</CustomField>