force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Results_self_reported_via_phone__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Results_self_reported_via_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked when patient states results of COVID test</description>
    <label>Results self-reported via phone</label>
    <type>Checkbox</type>
</CustomField>