force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Screen_is_negative__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Screen_is_negative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used when COVID screening is negative</description>
    <label>Screen is negative</label>
    <type>Checkbox</type>
</CustomField>