force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Someone_with_knownsuspected_COVID__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Someone_with_knownsuspected_COVID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ability to select Someone with known or suspected COVID as a result of exposure to covid in the last 14 days</description>
    <label>Someone with known or suspected COVID</label>
    <type>Checkbox</type>
</CustomField>