force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CS_Test_performed_in_the_last_5_days__c.field-meta.xml
<CustomField>
    <fullName>VCC_CS_Test_performed_in_the_last_5_days__c</fullName>
    <description>Used to confirm if COVID test was done in the last 5 days by answering Yes or NO, on CT Progress Note</description>
    <label>Test was performed in the last 5 days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>