force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_CSSRS_PlainText_Data__c.field-meta.xml
<CustomField>
    <fullName>VCC_CSSRS_PlainText_Data__c</fullName>
    <description>The results from the Columbia Screening Protocol will be placed here in plain text if the protocol has been completed. The overall result (positive or negative) as well as the question text with answers will be included.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Access the CSSRS - Suicide Risk Screen tab to perform the mental health assessment if you own this progress note.</inlineHelpText>
    <label>CSSRS Screening</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>