force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Current_Address_not_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>VCC_Current_Address_not_Primary_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if patient current address is not the same as the primary address</description>
    <inlineHelpText>Check if patient current address is not the same as the primary address</inlineHelpText>
    <label>Current Address not Primary Address</label>
    <type>Checkbox</type>
</CustomField>