force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Current_Address_Phone_Verified__c.field-meta.xml
<CustomField>
    <fullName>VCC_Current_Address_Phone_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indicates Caller’s current address and phone number was verified.</description>
    <label>Current Location &amp; Call Back # Verified</label>
    <type>Checkbox</type>
</CustomField>