force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Current_Patient_Care_Facility__c.field-meta.xml
<CustomField>
    <fullName>VCC_Current_Patient_Care_Facility__c</fullName>
    <description>Captures the current facility selected when service appointment is created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Patient Care Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>