force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Delivery_Route__c.field-meta.xml
<CustomField>
    <fullName>VCC_Delivery_Route__c</fullName>
    <description>Indicates how the medication was delivered to the patient</description>
    <inlineHelpText>Select how the medication was delivered to the patient</inlineHelpText>
    <label>Delivery Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
                <label>Local Mail</label>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
            <value>
                <fullName>CMOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>