force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>VCC_Diagnosis_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Diagnosis (ICD10) Code</description>
    <label>Diagnosis Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CodeSet.CodeSetType</field>
            <operation>equals</operation>
            <value>Diagnosis (ICD10)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Progress Notes (Diagnosis Code)</relationshipLabel>
    <relationshipName>Progress_Notes3</relationshipName>
    <type>Lookup</type>
</CustomField>