force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Diastolic_Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>VCC_Diastolic_Blood_Pressure__c</fullName>
    <description>Used for Vitals intake. Patient&apos;s diastolic blood pressure within 50 - 140 mmHg</description>
    <inlineHelpText>Patient&apos;s diastolic blood pressure within 50 - 140 mmHg</inlineHelpText>
    <label>Diastolic Blood Pressure</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>