force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Disagreement_Reason__c.field-meta.xml
<CustomField>
    <fullName>VCC_Disagreement_Reason__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Contains the Disagreement Reason on the Clinical Triage 2.0 Progress Note for SOAPIE template</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Disagreement Reason</label>
    <type>TextArea</type>
</CustomField>