force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Discuss_medication__c.field-meta.xml
<CustomField>
    <fullName>VCC_Discuss_medication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the patient is calling to discuss medication(s)</description>
    <inlineHelpText>Check if the patient is calling to discuss medication(s)</inlineHelpText>
    <label>Discuss medication(s)</label>
    <type>Checkbox</type>
</CustomField>