force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Discussed_Diet_with_patient__c.field-meta.xml
<CustomField>
    <fullName>VCC_Discussed_Diet_with_patient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Diet was discussed with the patient</description>
    <inlineHelpText>Check if Diet was discussed with the patient</inlineHelpText>
    <label>Discussed Diet with patient</label>
    <type>Checkbox</type>
</CustomField>