force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Discussed_Exercise_with_patient__c.field-meta.xml
<CustomField>
    <fullName>VCC_Discussed_Exercise_with_patient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Exercise was discussed with the patient</description>
    <inlineHelpText>Check if Exercise was discussed with the patient</inlineHelpText>
    <label>Discussed Exercise with patient</label>
    <type>Checkbox</type>
</CustomField>