force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Disposition_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>VCC_Disposition_Recommendations__c</fullName>
    <description>Field is used to store provider&apos;s recommendation following VCV evaluation</description>
    <inlineHelpText>Provider&apos;s recommendation following VCV evaluation</inlineHelpText>
    <label>Disposition Recommendations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>911</fullName>
            </value>
            <value>
                <fullName>Emergency Care - VA</fullName>
            </value>
            <value>
                <fullName>Emergency Care - Community</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>PCP Appointment</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Specialty Care</fullName>
            </value>
            <value>
                <fullName>Transfer to Member Services</fullName>
            </value>
            <value>
                <fullName>Urgent Care - VA</fullName>
            </value>
            <value>
                <fullName>Urgent Care - Community</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>