force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Does_not_agree_to_care_plan_comments__c.field-meta.xml
<CustomField>
    <fullName>VCC_Does_not_agree_to_care_plan_comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter comment if patient does not agree to plan care</inlineHelpText>
    <label>Does not agree to care plan comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>