force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Does_patient_agree_to_recommendation__c.field-meta.xml
<CustomField>
    <fullName>VCC_Does_patient_agree_to_recommendation__c</fullName>
    <description>Indicates if a patient agrees to the recommendation provided.</description>
    <label>Does patient agree to recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>