force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Drug_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_Drug_Name__c</fullName>
    <description>Used to enter the drug name on the prescription that the patient has lost</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the drug name on the prescription that the patient has lost</inlineHelpText>
    <label>Drug Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>