force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Emerg_department_warnings_reviewed__c.field-meta.xml
<CustomField>
    <fullName>VCC_Emerg_department_warnings_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the emergency department warnings have been reviewed.</description>
    <inlineHelpText>Check if the emergency department warnings have been reviewed.</inlineHelpText>
    <label>Emergency department warnings reviewed</label>
    <type>Checkbox</type>
</CustomField>