force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Emergency_Contact1__c.field-meta.xml
<CustomField>
    <fullName>VCC_Emergency_Contact1__c</fullName>
    <description>Patient’s Emergency Contact’s Phone for use on the Progress Note.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EMERGENCY CONTACT</label>
    <length>254</length>
    <type>Text</type>
</CustomField>